fix scrollbar

--- a/src/pages/form/Page/style.module.css
+++ b/src/pages/form/Page/style.module.css
@@ -20,7 +20,7 @@
   scroll-behavior: smooth;
   color: white;
   background: linear-gradient(180deg, #002339 0%, #1D0B1D 100%);
-  padding: 0 1.5em;
+  padding: 0px 20px;
 }
 .container {
   --max-width: 1500px;
